<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ModernEditActivity">
  <!-- Daten für Bindung -->
  <data>

    <variable
        name="vm"
        type="com.example.zeiterfassung.viewmodels.EditViewModel" />
  </data>
  <!-- Layout -->
  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:paddingStart="@dimen/ActivityHPadding"
      android:paddingTop="@dimen/ActivityVPadding"
      android:paddingEnd="@dimen/ActivityHPadding"
      android:paddingBottom="@dimen/ActivityVPadding">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/CenterHelper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/StartTimeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/LabelStartTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/StartDateValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ColSpace"
        android:ems="10"
        android:inputType="date"
        android:onLongClickListener="@{(v) -> vm.onShazaLongClick(v,true)}"
        app:date="@{vm.startTime}"
        app:layout_constraintEnd_toStartOf="@+id/CenterHelper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartTimeLabel" />

    <EditText
        android:id="@+id/StartTimeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ColSpace"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/CenterHelper"
        app:layout_constraintTop_toTopOf="@+id/StartDateValue"
        app:time="@{vm.startTime}" />

    <TextView
        android:id="@+id/EndTimeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/RowVPadding"
        android:text="@string/LabelEndTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartDateValue" />

    <EditText
        android:id="@+id/EndDateValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ColSpace"
        android:ems="10"
        android:inputType="date"
        app:date="@{vm.endTime}"
        app:layout_constraintEnd_toStartOf="@+id/CenterHelper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EndTimeLabel" />

    <EditText
        android:id="@+id/EndTimeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/ColSpace"
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/CenterHelper"
        app:layout_constraintTop_toBottomOf="@+id/EndTimeLabel"
        app:time="@{vm.endTime}" />

    <TextView
        android:id="@+id/PauseLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/RowVPadding"
        android:text="@string/LabelPause"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EndDateValue" />

    <EditText
        android:id="@+id/PauseValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/ColSpace"
        android:ems="10"
        android:inputType="number"
        android:text="@={vm.pause}"
        app:layout_constraintEnd_toStartOf="@+id/CenterHelper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PauseLabel" />

    <TextView
        android:id="@+id/CommentLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/RowVPadding"
        android:text="@string/LabelComment"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PauseValue" />

    <EditText
        android:id="@+id/CommentValue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@={vm.comment}"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CommentLabel" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>